--- a/todoVue/index.html
+++ b/todoVue/index.html
@@ -47,6 +47,7 @@
             <!-- This footer should hidden by default and shown when there are todos -->
             <footer class="footer">
                 <!-- This should be `0 items left` by default -->
+                <!-- 模板中调用函数 将来函数的返回值会渲染 当绑定函数坐在视图发生更新 该函数会被重新执行 -->
                 <span class="todo-count"><strong>{{leftNum}}</strong> item left</span>
                 <!-- Remove this if you don't implement routing -->
                 <ul class="filters">
