--- a/todoVue/index.html
+++ b/todoVue/index.html
@@ -26,22 +26,14 @@
                     <!-- These are here just to show the structure of the list items -->
                     <!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
 					<!-- :class={类名：布尔值} 当布尔值为true，则该类生效 -->
-					<li :class="{completed:item.completed}" v-for="(item,index) of todos">
+					<li :class="{completed:item.completed,editing:currentItem==item}" v-for="(item,index) of filterTodos">
                         <div class="view">
                             <input class="toggle" type="checkbox" v-model="item.completed">
-                            <label>{{item.title}}</label>
+                            <label @dblclick="currentItem=item">{{item.title}}</label>
                             <button class="destroy" @click="removeTodo(index,$event)"></button>
                         </div>
-                        <input class="edit" value="Create a TodoMVC template">
+                        <input class="edit" @keyup.esc="currentItem=null" @keyup.enter="saveEdit(item,index,$event)" @blur="saveEdit(item,index,$event)" :value="item.title">
                     </li>
-                    <!-- <li>
-						<div class="view">
-							<input class="toggle" type="checkbox">
-							<label>Buy a unicorn</label>
-							<button class="destroy"></button>
-						</div>
-						<input class="edit" value="Rule the web">
-					</li> -->
                 </ul>
             </section>
             <!-- This footer should hidden by default and shown when there are todos -->
