--- a/todoVue/index.html
+++ b/todoVue/index.html
@@ -15,18 +15,18 @@
     <section class="todoapp">
         <header class="header">
             <h1>{{msg}}</h1>
-            <input class="new-todo" placeholder="What needs to be done?" autofocus @keyup="addTodo">
+            <input class="new-todo" placeholder="What needs to be done?" v-focus @keyup.enter="addTodo">
         </header>
         <template v-if="todos.length">
             <!-- This section should be hidden by default and shown when there are todos -->
             <section class="main">
-                <input id="toggle-all" @click="toggleAll" class="toggle-all" type="checkbox">
+                <input id="toggle-all" v-model="toggleStat" @click="toggleAll" class="toggle-all" type="checkbox">
                 <label for="toggle-all">Mark all as complete</label>
                 <ul class="todo-list">
                     <!-- These are here just to show the structure of the list items -->
                     <!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
 					<!-- :class={类名：布尔值} 当布尔值为true，则该类生效 -->
-					<li :class="{completed:item.completed,editing:currentItem==item}" v-for="(item,index) of filterTodos">
+					<li :class="{completed: item.completed,editing:currentItem==item}" v-for="(item,index) of filterTodos">
                         <div class="view">
                             <input class="toggle" @click="toggle(item,$event)" type="checkbox" v-model="item.completed">
                             <label @dblclick="currentItem=item">{{item.title}}</label>
@@ -42,15 +42,18 @@
                 <!-- 模板中调用函数 将来函数的返回值会渲染 当绑定函数坐在视图发生更新 该函数会被重新执行 -->
                 <span class="todo-count"><strong>{{leftNum}}</strong> item left</span>
                 <!-- Remove this if you don't implement routing -->
-                <ul class="filters">
+                <ul class="filters" v-auto-active>
                     <li>
-                        <a :class="{selected:filterStat==='all'}" href="#/">All</a>
+                        <!-- <a :class="{selected:filterStat==='all'}" href="#/">All</a> -->
+                        <a href="#/">All</a>
                     </li>
                     <li>
-                        <a :class="{selected:filterStat==='active'}" href="#/active">Active</a>
+                        <!-- <a :class="{selected:filterStat==='active'}" href="#/active">Active</a> -->
+                        <a href="#/active">Active</a>
                     </li>
                     <li>
-                        <a :class="{selected:filterStat==='completed'}" href="#/completed">Completed</a>
+                        <!-- <a :class="{selected:filterStat==='completed'}" href="#/completed">Completed</a> -->
+                        <a href="#/completed">Completed</a>
                     </li>
                 </ul>
                 <!-- Hidden if no completed items are left ↓ -->
